# binarysearch-autoactions-practice

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/binarysearch/: bisect.py  bisect_search.py
tests/binarysearch/: test_bisect.py
