[metadata]
name=binarysearch
description=autotests and actions on binarysearch example
author=IGalat
license=MIT
license_file=LICENSE

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = binarysearch
install_requires =
    attrs>=22
python_requires = >=3.9
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=3
    mypy>=0.971
    flake8>=5
    tox>=3.25

[options.package_data]
# shows that this package is typed. why is this needed?
binarysearch = py.typed

[flake8]
max-line-length = 120
